--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -9,7 +9,7 @@ appearance:
   theme_day: minimal
   theme_night: minimal
   font: minimal
-  font_size: L
+  font_size: M
 
 # SEO
 
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
+    description: 'Personal website of João V. Guedes-Neto, a Ph.D. in Political Science.'
     twitter: 'wowchemy'
   analytics:
     google_analytics: ''
@@ -41,14 +41,14 @@ header:
 
 # Site footer
 
-footer:
-  copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+#footer:
+#  copyright:
+#    notice: '© {year} Me. This work is licensed under {license}'
+#    license:
+#      enable: false
+#      allow_derivatives: false
+#      share_alike: false
+#      allow_commercial: false
 
 # Localization
 
