--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -32,10 +32,7 @@ module:
 
 enableGitInfo: false
 summaryLength: 30
-
-[pagination]
-pagerSize = 10
-
+pagination: 10
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
