--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -32,7 +32,8 @@ module:
 
 enableGitInfo: false
 summaryLength: 30
-pagination: 10
+pagination:
+  pagerSize: 10
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
